# ceshi-danmu

./: CMakeLists.txt  README  README.md
android-cmake/: AndroidNdkModules.cmake
android_jni/: CMakeLists.txt  FaceManager.cpp  FaceManager.h  JniBitmap.cpp  JniBitmap.h  JniFloatArray.cpp  JniFloatArray.h  native-lib.cpp
cmake/: inferXLiteUtil.cmake
example/: CMakeLists.txt  README.md  control_gpio.c  detect_live.cpp  entrance_guard.cpp  identify_face.cpp  main.cpp  per_gpio.h  test_detect_live_camera.cpp  test_face_pose.cpp
face_attr/: CMakeLists.txt  face_attr.cpp  face_attr.hpp
face_base/: zhoubingbing.txt
face_detector/: CMakeLists.txt  face_detector.cpp  face_detector.hpp
face_pose/: CMakeLists.txt  face_pose.cpp  face_pose.hpp
face_veri/: CMakeLists.txt  face_veri.cpp  face_veri.hpp
face_veri_lib/inferxlite/include/: dirent_win.h  hash.h  inferxlite.h  inferxlite_common.h  interface.h  metafmt.h  model_init.h  pipe.h  quantization.h
face_veri_lib/inferxlite/include/backends/: backend.h  backend_impl.h
face_veri_lib/inferxlite/lib/: libinferxlite.so.1
face_veri_lib/inferxlite_models/: .resnet84.c.swp  FaceLandmark.c  resnet84.c
face_veri_lib/perfblas/include/: openblas_config.h
face_veri_lib/perfblas/lib/cmake/perfblas/: PerfBLASConfig.cmake  PerfBLASConfigVersion.cmake
face_veri_lib/perfdnn/include/: activations.h  arm_neon_.h  blas.h  fxdiv.h  hwinfo.h  macros.h  mat.h  perfdnn.h  relu.h  simd_const.h  simd_exps_neon.h  simd_lns_neon.h  simd_map.h  simd_pows_neon.h  simd_relu_neon.h  simd_tanhs_neon.h  transform.h  validation.h  winograd.h
face_veri_lib/perfdnn/lib/: libperfdnn.so.aarch64
inferxlite_models/: AlexNet.c  FaceNetNew.c  Gender.c  yolov2tiny.c
model_data/: FaceLandmark.inferxmodel  FaceNetNew.inferxmodel
modules/: age_judge.cpp  age_judge.h  align.cpp  align.h  face_detect.cpp  face_detect.h  face_quality.cpp  face_quality.h  gender_judge.cpp  gender_judge.h  landmark.cpp  landmark.h  recog.cpp  recog.h  utils.cpp  utils.hpp
scripts/: build_face_veri.sh
