include_directories("{CMAKE_CURRENT_SOURCE_DIR}")

add_executable(test_face_verify  main.cpp ${face_detector_file} ${face_veri_file} ${face_attr_file} ${face_detect_feature_src} ${face_detect_feature_header} ${inferxlite_models_src})
add_executable(entrance_guard  entrance_guard.cpp control_gpio.c  ${face_detector_file} ${face_veri_file} ${face_attr_file} ${face_detect_feature_src} ${face_detect_feature_header} ${inferxlite_models_src})
add_executable(identify_face  identify_face.cpp )
target_link_libraries(identify_face  face_verify face_detector)
if(BUILD_WITH_OPENBLAS)
        target_link_libraries(test_face_verify ${OpenCV_LIBS} inferxlite.a openblas.a z )
        target_link_libraries(entrance_guard ${OpenCV_LIBS} inferxlite.a openblas.a z )
        target_link_libraries(identify_face  ${OpenCV_LIBS} inferxlite.a openblas.a z )
endif()
if(BUILD_WITH_PERFDNN)
        target_link_libraries(test_face_verify ${OpenCV_LIBS}  inferxlite pthread )
        target_link_libraries(entrance_guard ${OpenCV_LIBS}  inferxlite pthread )
        target_link_libraries(identify_face  ${OpenCV_LIBS}  inferxlite pthread )
endif()
if(BUILD_WITH_PERFDNN_CL)
        target_link_libraries(test_face_verify ${OpenCV_LIBS}  inferxlite pthread PerfDNN_ocl PerfDNN_core)
        target_link_libraries(entrance_guard ${OpenCV_LIBS}  inferxlite pthread PerfDNN_ocl PerfDNN_core)
        target_link_libraries(identify_face  ${OpenCV_LIBS}  inferxlite pthread PerfDNN_ocl PerfDNN_core)
endif()
if(ANDROID)
	target_link_libraries(test_face_verify log)
        target_link_libraries(entrance_guard log)
        target_link_libraries(identify_face log)
endif()
if(BUILD_WITH_BITANSWER)
	target_link_libraries(identify_face  000032C7_00002881_arm_x64)
        target_link_libraries(test_face_verify 000032C7_00002881_arm_x64)
        target_link_libraries(entrance_guard 000032C7_00002881_arm_x64)
endif()
install(TARGETS test_face_verify  DESTINATION "${CMAKE_CURRENT_SOURCE_DIR}")
install(TARGETS entrance_guard  DESTINATION "${CMAKE_CURRENT_SOURCE_DIR}")
install(TARGETS identify_face  DESTINATION bin)
